#14 - Add RetryHandler with the option to define it on the HttpContext